Remove dependency to org.eclipse.ui.browser