@@ -1,7 +1,7 @@
 package name.abuchen.portfolio.online;
 
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 
 import name.abuchen.portfolio.model.Security;
 
@@ -26,10 +26,10 @@ public class WebLocation
         return pattern;
     }
 
-    public URL constructURL(Security security) throws MalformedURLException
+    public URI constructURL(Security security) throws URISyntaxException
     {
         String url = pattern.replace("{tickerSymbol}", security.getTickerSymbol()); //$NON-NLS-1$
         url = url.replace("{isin}", security.getIsin()); //$NON-NLS-1$
-        return new URL(url);
+        return new URI(url);
     }
 }
